# azure-data-engineering

./: .gitignore  pyproject.toml
airflow-dags/: spark_airflow_example.py
app/: spark_utils.py
app/src/: parallel_execution.py
dbt_databricks/: dbt_project.yml
iaac/: variable.tf
